# markov-chain-text

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Chain/: Chain.cpp  Chain.hpp
src/Node/: Node.cpp  Node.hpp
src/Random/: Random.hpp
